# ShadowSniff

./: Cargo.toml  LICENSE  README.MD  justfile
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
collector/: Cargo.toml
collector/src/: atomic.rs  lib.rs
country-emoji/: Cargo.toml
country-emoji/src/: lib.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/bindings/: mod.rs
database/src/sqlite/: db.rs
hollowing/: Cargo.toml  README.MD
hollowing/src/: lib.rs
ipinfo/: Cargo.toml
ipinfo/src/: lib.rs
json/: Cargo.toml
json/src/: lib.rs  parser.rs  tokenize.rs
regedit/: Cargo.toml
regedit/src/: lib.rs
requests/: Cargo.toml
requests/src/: lib.rs
shadowsniff/: Cargo.toml
shadowsniff/browsers/: Cargo.toml
shadowsniff/browsers/src/: lib.rs
shadowsniff/browsers/src/chromium/: autofill.rs  bookmarks.rs  cookies.rs  creditcards.rs  downloads.rs  history.rs  mod.rs  passwords.rs
shadowsniff/browsers/src/gecko/: cookies.rs  history.rs  mod.rs  passwords.rs
shadowsniff/ftp/: Cargo.toml
shadowsniff/ftp/src/: filezilla.rs  lib.rs
shadowsniff/messengers/: Cargo.toml
shadowsniff/messengers/src/: discord.rs  lib.rs  telegram.rs
shadowsniff/src/: clipboard.rs  installedapps.rs  lib.rs  processes.rs  screenshot.rs  systeminfo.rs  userinfo.rs
shadowsniff/vpn/: Cargo.toml
shadowsniff/vpn/src/: lib.rs  nordvpn.rs  openvpn.rs
shadowsniff/vpns/: Cargo.toml
shadowsniff/vpns/src/: lib.rs
sqlite/: Cargo.toml  build.rs
sqlite/sqlite3/: sqlite3.h
sqlite/src/: lib.rs  reader.rs
sqlite/src/bindings/: mod.rs  sqlite3_bindings.rs
sqlite/src/sqlite/: cursor.rs  db.rs  mod.rs  page.rs  pager.rs  scanner.rs
src/: main.rs  panic.rs
src/stealer/: clipboard.rs  mod.rs  processes.rs  screenshot.rs
stealer/: Cargo.toml
stealer/browsers/: Cargo.toml
stealer/browsers/src/: lib.rs
stealer/browsers/src/chromium/: autofill.rs  bookmarks.rs  cookies.rs  creditcards.rs  downloads.rs  hisotry.rs  history.rs  mod.rs  passwords.rs
stealer/ftp/: Cargo.toml
stealer/ftp/src/: filezilla.rs  lib.rs
stealer/messengers/: Cargo.toml
stealer/messengers/src/: discord.rs  lib.rs  telegram.rs
stealer/src/: clipboard.rs  lib.rs  processes.rs  screenshot.rs  systeminfo.rs
tasks/: Cargo.toml
tasks/src/: lib.rs
utils/: Cargo.toml
utils/src/: base64.rs  lib.rs  logging.rs  path.rs  process.rs  random.rs
utils/src/browsers/: chromium.rs  mod.rs
utils/src/io/: cursor.rs
zip/: Cargo.toml
zip/src/: create.rs  lib.rs
