[package]
name = "steall"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[profile.dev]
panic = "abort"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_ProcessStatus", 
    "Win32_System_Threading", 
    "Win32_Foundation", 
    "Win32_Graphics_Gdi", 
    "Win32_UI_WindowsAndMessaging"
] }
wee_alloc = "0.4.5"
utils = { path = "utils" }
tasks = { path = "tasks" }
miniz_oxide = { version = "0.8.8", default-features = false, features = ["with-alloc"] }
crc32fast = { version = "1.4.2", default-features = false }