[package]
name = "ShadowSniff"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
] }
wee_alloc = "0.4.5"
shadowsniff = { path = "shadowsniff" }
tasks = { path = "tasks" }
utils = { path = "utils" }