[package]
name = "hollowing"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Security",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming"
] }
utils = { path = "../utils" }