[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_Pipes"
] }
embedded-io = "0.6.1"