[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
json = { path = "../json" }
obfstr = "0.4.4"
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Performance"
] }
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
